--- a/index.html
+++ b/index.html
@@ -4,13 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jagannath Prabhakaran</title>
-    <style>
-        br.half-size::after {
-            content: "";
-            display: block;
-            margin-bottom: 2px; /* Adjust this value as needed */
-        }
-    </style>
+    <link rel="icon" href="bagel.png" type="image/png"> 
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
