--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
             <ul>
                 <li>ML Infrastructure</li>
                 <li>Distributed Systems</li>
-                <li>Natural Language Processing</li>
+                <li>Cyper-Physical Systems</li>
                 <li>Agentic AI</li>
                 <li>Fresh Bagels</li>
             </ul>
 
-            <p>I am currently working as a Data Engineer Intern at Tesla 🚗 on the Fleet Analytics team.  I am also researching deep-learning bioinformatics @ <a href="https://kiharalab.org/web/">Kihara Lab 🧬</a> and Resilient Wireless Networks @ <a href="https://engineering.purdue.edu/dcsl/about/">DCSL 🌐</a>. I'm also a lecturer at Purdue, teaching  <a href="https://www.cs.purdue.edu/academic-programs/courses/2024_spring_courses.html">CS 193: Tools</a>.
+            <p>I am currently working as a Data Engineer Intern at Tesla 🚗 on the Fleet Analytics team.  I am also researching deep-learning bioinformatics @ <a href="https://kiharalab.org/web/">Kihara Lab 🧬</a> and Distributed Cyber-Physical Systems @ <a href="https://engineering.purdue.edu/dcsl/about/">DCSL 🌐</a>. I'm also a lecturer at Purdue, teaching  <a href="https://www.cs.purdue.edu/academic-programs/courses/2024_spring_courses.html">CS 193: Tools</a>.
                 Previously, I have worked at Cytokinetics on E2E ML Infra and a startup on agentic RAG applications.
                 <br> <br> 
                 Feel free to reach out to me at <a href="mailto:jag.prabhakaran@gmail.com">jag.prabhakaran@gmail.com</a> or follow me on <a href="https://www.linkedin.com/in/jag-prabhakaran/">LinkedIn</a> and <a href="https://github.com/jag-prabhakaran">GitHub</a>.</p>
