--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                 <li>Fresh Bagels</li>
             </ul>
 
-            <p>I am currently working as a Software Engineer Intern at Tesla 🚗 on the Fleet Data Infrastructure team. I am also researching deep-learning bioinformatics @ <a href="https://kiharalab.org/web/">Kihara Lab 🧬</a> and Distributed Cyber-Physical Systems @ <a href="https://engineering.purdue.edu/dcsl/about/">DCSL 🌐</a>. I'm also a lecturer at Purdue, teaching <a href="https://www.cs.purdue.edu/academic-programs/courses/2024_spring_courses.html">CS 193: Tools</a>.
+            <p>I am currently working as a Software Engineer Intern at Tesla 🚗 on the Fleet Data Infrastructure team. I am also researching deep-learning bioinformatics @ <a href="https://kiharalab.org/web/" target="_blank">Kihara Lab 🧬</a> and Distributed Cyber-Physical Systems @ <a href="https://engineering.purdue.edu/dcsl/about/" target="_blank">DCSL 🌐</a>. I'm also a lecturer at Purdue, teaching <a href="https://www.cs.purdue.edu/academic-programs/courses/2024_spring_courses.html" target="_blank">CS 193: Tools</a>.
                 Previously, I have worked at Cytokinetics on E2E ML Infra and a startup on agentic RAG applications.
                 <br><br>
-                Feel free to reach out to me at <a href="mailto:jag.prabhakaran@gmail.com">jag.prabhakaran@gmail.com</a> or follow me on <a href="https://www.linkedin.com/in/jag-prabhakaran/">LinkedIn</a> and <a href="https://github.com/jag-prabhakaran">GitHub</a>.</p>
+                Feel free to reach out to me at <a href="mailto:jag.prabhakaran@gmail.com" target="_blank">jag.prabhakaran@gmail.com</a> or connect with me on <a href="https://www.linkedin.com/in/jag-prabhakaran/" target="_blank">LinkedIn</a> and <a href="https://github.com/jag-prabhakaran" target="_blank">GitHub</a>.</p>
         </div>
         <div class="profile-pic">
             <img src="profile-pic.png" alt="Jagannath Prabhakaran">
