--- a/index.html
+++ b/index.html
@@ -11,20 +11,21 @@
     <div class="container">
         <div class="content">
             <h1>Jagannath Prabhakaran 🚂</h1>
-            <p>👋 Hi! I'm an undergrad at Purdue University studying Computer Science and Mathematics.</p>
-            <h2>My Current Interests Include:</h2>
+            <p> 👋 Hi! I'm an undergrad at Purdue University, passionate about advancing technology and solving complex problems in ML Infrastructure, Distributed Systems, Cyber-Physical Systems, and AI Inference. I also love fresh bagels!</p>
+            <h2>My Current Work:</h2>
             <ul>
-                <li>ML Infrastructure</li>
-                <li>Distributed Systems</li>
-                <li>Cyber-Physical Systems</li>
-                <li>Agentic AI</li>
-                <li>Fresh Bagels</li>
+                <li>Data Engineer Intern @ Tesla 🚗 (Fleet Analytics Team)</li>
+                <li>Lecturer @ Purdue University ✏️ (<a href="https://www.cs.purdue.edu/academic-programs/courses/2024_spring_courses.html" target="_blank">CS 193</a>: Tools)</li>
+                <li>Researcher @ Purdue University: </li>
+                <ul>
+                <li>Distributed Cyber-Physical Systems 🌐 @ <a href="https://engineering.purdue.edu/dcsl/about/" target="_blank">DCSL </a> </li>
+                <li>Deep-Learning Bioinformatics 🧬 @ <a href="https://kiharalab.org/web/" target="_blank">Kihara Lab </a> </li>
+            </ul>
             </ul>
 
-            <p>I am currently working as a Software Engineer Intern at Tesla 🚗 on the Fleet Data Infrastructure team. I am also researching deep-learning bioinformatics @ <a href="https://kiharalab.org/web/" target="_blank">Kihara Lab 🧬</a> and Distributed Cyber-Physical Systems @ <a href="https://engineering.purdue.edu/dcsl/about/" target="_blank">DCSL 🌐</a>. I'm also a lecturer at Purdue, teaching <a href="https://www.cs.purdue.edu/academic-programs/courses/2024_spring_courses.html" target="_blank">CS 193: Tools</a>.
-                Previously, I have worked at Cytokinetics on E2E ML Infra and a startup on agentic RAG applications.
-                <br><br>
-                Feel free to reach out to me at <a href="mailto:jag.prabhakaran@gmail.com" target="_blank">jag.prabhakaran@gmail.com</a> or connect with me on <a href="https://www.linkedin.com/in/jag-prabhakaran/" target="_blank">LinkedIn</a> and <a href="https://github.com/jag-prabhakaran" target="_blank">GitHub</a>.</p>
+            <p>
+                Feel free to reach out to discuss technology, research, or just to share your favorite bagel places! 
+                Email me at <a href="mailto:jag.prabhakaran@gmail.com" target="_blank">jag.prabhakaran@gmail.com</a> or connect with me on <a href="https://www.linkedin.com/in/jag-prabhakaran/" target="_blank">LinkedIn</a> and <a href="https://github.com/jag-prabhakaran" target="_blank">GitHub</a>.</p>
         </div>
         <div class="profile-pic">
             <img src="profile-pic.png" alt="Jagannath Prabhakaran">
