--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +9,13 @@
 </head>
 <body>
     <div class="container">
+        <label class="switch" style="position: absolute; top: -34px; right: 10px;">
+            <input type="checkbox" id="theme-toggle">
+            <span class="slider round">
+                <img src="day.png" class="icon day-icon">
+                <img src="night.png" class="icon night-icon">
+            </span>
+        </label>
         <div class="content">
             <h1>Jagannath Prabhakaran 🚂</h1>
             <p> 👋 Hi! I'm an undergrad at Purdue University, passionate about advancing technology and solving complex problems in ML Infrastructure, Distributed Systems, Cyber-Physical Systems, and AI Inference. I also love fresh bagels!</p>
@@ -18,14 +25,14 @@
                 <li>Lecturer @ Purdue University ✏️ (<a href="https://www.cs.purdue.edu/academic-programs/courses/2024_spring_courses.html" target="_blank">CS 193</a>: Tools)</li>
                 <li>Researcher @ Purdue University: </li>
                 <ul>
-                <li>Distributed Cyber-Physical Systems 🌐 @ <a href="https://engineering.purdue.edu/dcsl/about/" target="_blank">DCSL </a> </li>
-                <li>Deep-Learning Bioinformatics 🧬 @ <a href="https://kiharalab.org/web/" target="_blank">Kihara Lab </a> </li>
+                    <li>Distributed Cyber-Physical Systems 🌐 @ <a href="https://engineering.purdue.edu/dcsl/about/" target="_blank">DCSL </a></li>
+                    <li>Deep-Learning Bioinformatics 🧬 @ <a href="https://kiharalab.org/web/" target="_blank">Kihara Lab </a></li>
+                </ul>
             </ul>
-            </ul>
-
             <p>
                 Feel free to reach out to discuss technology, research, or just to share your favorite bagel places! 
-                Email me at <a href="mailto:jag.prabhakaran@gmail.com" target="_blank">jag.prabhakaran@gmail.com</a> or connect with me on <a href="https://www.linkedin.com/in/jag-prabhakaran/" target="_blank">LinkedIn</a> and <a href="https://github.com/jag-prabhakaran" target="_blank">GitHub</a>.</p>
+                Email me at <a href="mailto:jag.prabhakaran@gmail.com" target="_blank">jag.prabhakaran@gmail.com</a> or connect with me on <a href="https://www.linkedin.com/in/jag-prabhakaran/" target="_blank">LinkedIn</a> and <a href="https://github.com/jag-prabhakaran" target="_blank">GitHub</a>.
+            </p>
         </div>
         <div class="profile-pic">
             <img src="profile-pic.png" alt="Jagannath Prabhakaran">
