--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <input type="checkbox" id="theme-toggle">
             <span class="slider round">
                 <img src="day.png" class="icon day-icon">
-                <img src="night.png" class="icon night-icon">
+                <img src="moon.png" class="icon night-icon">
             </span>
         </label>
         <div class="content">
