--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         </label>
         <div class="content">
             <h1>Jagannath Prabhakaran 🚂</h1>
-            <p> 👋 Hi! I'm an undergrad at Purdue University, passionate about advancing technology and solving complex problems in ML Infrastructure, Distributed Systems, Cyber-Physical Systems, and AI Inference. I also love fresh bagels!</p>
+            <p> 👋 Hi! I'm an undergrad at Purdue studying Computer Science and Math. <br>
+                I'm passionate about exploring and solving problems in ML Infrastructure, Distributed Systems, and Data Engineering. I also love warm bagels!</p>
             <h2>My Current Work:</h2>
             <ul>
                 <li>Data Engineer Intern @ Tesla 🚗 (Fleet Analytics Team)</li>
